"Updated VSCode settings: added 7 new words to cSpell dictionary and kept existing settings unchanged."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "cSpell.words": [
-        "logocon"
+        "bmail",
+        "bname",
+        "bphone",
+        "Ccircle",
+        "Csvg",
+        "logocon",
+        "oname",
+        "ophone"
     ],
     "liveServer.settings.port": 5501
 }
