"Updated VSCode settings and added URL rewriting logic in main.js"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "accelerationapp",
         "bmail",
         "bname",
         "bphone",
         "Ccircle",
         "Csvg",
+        "incubationapp",
         "logocon",
         "oname",
         "ophone"
